packages/dot-parser/src/parser.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Graph: peg$parseGraph,
  };
  let peg$startRuleFunction = peg$parseGraph;

  const peg$c0 = "strict";
  const peg$c1 = "{";
  const peg$c2 = "}";
  const peg$c3 = "digraph";
  const peg$c4 = "graph";
  const peg$c5 = ";";
  const peg$c6 = "node";
  const peg$c7 = "edge";
  const peg$c8 = "=";
  const peg$c9 = "subgraph";
  const peg$c10 = "->";
  const peg$c11 = "[";
  const peg$c12 = "]";
  const peg$c13 = ",";
  const peg$c14 = ".";
  const peg$c15 = "\"";
  const peg$c16 = "\\\"";
  const peg$c17 = "\\n";
  const peg$c18 = "\\t";
  const peg$c19 = "\\\\";
  const peg$c20 = "true";
  const peg$c21 = "false";
  const peg$c22 = "ms";
  const peg$c23 = "//";
  const peg$c24 = "/*";
  const peg$c25 = "*/";

  const peg$r0 = /^[A-Za-z_]/;
  const peg$r1 = /^[A-Za-z0-9_]/;
  const peg$r2 = /^[^"\\]/;
  const peg$r3 = /^[\-]/;
  const peg$r4 = /^[0-9]/;
  const peg$r5 = /^[dhms]/;
  const peg$r6 = /^[ \t\n\r]/;
  const peg$r7 = /^[\n\r]/;

  const peg$e0 = peg$literalExpectation("strict", false);
  const peg$e1 = peg$literalExpectation("{", false);
  const peg$e2 = peg$literalExpectation("}", false);
  const peg$e3 = peg$literalExpectation("digraph", false);
  const peg$e4 = peg$literalExpectation("graph", false);
  const peg$e5 = peg$literalExpectation(";", false);
  const peg$e6 = peg$literalExpectation("node", false);
  const peg$e7 = peg$literalExpectation("edge", false);
  const peg$e8 = peg$literalExpectation("=", false);
  const peg$e9 = peg$literalExpectation("subgraph", false);
  const peg$e10 = peg$literalExpectation("->", false);
  const peg$e11 = peg$literalExpectation("[", false);
  const peg$e12 = peg$literalExpectation("]", false);
  const peg$e13 = peg$literalExpectation(",", false);
  const peg$e14 = peg$literalExpectation(".", false);
  const peg$e15 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false, false);
  const peg$e16 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false, false);
  const peg$e17 = peg$literalExpectation("\"", false);
  const peg$e18 = peg$literalExpectation("\\\"", false);
  const peg$e19 = peg$literalExpectation("\\n", false);
  const peg$e20 = peg$literalExpectation("\\t", false);
  const peg$e21 = peg$literalExpectation("\\\\", false);
  const peg$e22 = peg$classExpectation(["\"", "\\"], true, false, false);
  const peg$e23 = peg$classExpectation(["-"], false, false, false);
  const peg$e24 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e25 = peg$literalExpectation("true", false);
  const peg$e26 = peg$literalExpectation("false", false);
  const peg$e27 = peg$literalExpectation("ms", false);
  const peg$e28 = peg$classExpectation(["d", "h", "m", "s"], false, false, false);
  const peg$e29 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
  const peg$e30 = peg$literalExpectation("//", false);
  const peg$e31 = peg$classExpectation(["\n", "\r"], false, false, false);
  const peg$e32 = peg$anyExpectation();
  const peg$e33 = peg$literalExpectation("/*", false);
  const peg$e34 = peg$literalExpectation("*/", false);

  function peg$f0(type, id, stmts) {
    return buildGraph(type, id, stmts.flat());
  }
  function peg$f1() {    return 'digraph';  }
  function peg$f2(attrs) {
    return { type: 'graph_attr', attrs };
  }
  function peg$f3(attrs) {
    return { type: 'node_defaults', attrs: parseNodeAttributes(attrs).attributes };
  }
  function peg$f4(attrs) {
    return { type: 'edge_defaults', attrs: parseEdgeAttributes(attrs).attributes };
  }
  function peg$f5(key, value) {
    return { type: 'graph_attr', attrs: { [key]: value } };
  }
  function peg$f6(id, stmts) {
    return { type: 'subgraph', id, statements: stmts.flat() };
  }
  function peg$f7(id, attrs) {
    return [{
      type: 'node',
      id,
      ...parseNodeAttributes(attrs || {})
    }];
  }
  function peg$f8(nodes, attrs) {
    const edges = [];
    for (let i = 0; i < nodes.length - 1; i++) {
      edges.push({
        type: 'edge',
        from: nodes[i],
        to: nodes[i + 1],
        ...parseEdgeAttributes(attrs || {})
      });
    }
    return [{ type: 'edge', edges }];
  }
  function peg$f9(first, rest) {
    return [first, ...rest.map(r => r[3])];
  }
  function peg$f10(attrs) {
    return attrs || {};
  }
  function peg$f11(first, rest) {
    const result = { ...first };
    for (const r of rest) {
      Object.assign(result, r[3]);
    }
    return result;
  }
  function peg$f12(key, value) {
    return { [key]: value };
  }
  function peg$f13(parts) {
    return parts.join('.');
  }
  function peg$f14() {
    return text();
  }
  function peg$f15(chars) {
    return chars.join('');
  }
  function peg$f16() {    return '"';  }
  function peg$f17() {    return '\n';  }
  function peg$f18() {    return '\t';  }
  function peg$f19() {    return '\\';  }
  function peg$f20() {
    return parseInt(text(), 10);
  }
  function peg$f21() {
    return parseFloat(text());
  }
  function peg$f22() {    return true;  }
  function peg$f23() {    return false;  }
  function peg$f24(value, unit) {
    return { value, unit };
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseGraph() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 6) === peg$c0) {
      s2 = peg$c0;
      peg$currPos += 6;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parse_();
    s4 = peg$parseGraphType();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s6 = peg$parseIdentifier();
      if (s6 === peg$FAILED) {
        s6 = null;
      }
      s7 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 123) {
        s8 = peg$c1;
        peg$currPos++;
      } else {
        s8 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s8 !== peg$FAILED) {
        s9 = peg$parse_();
        s10 = [];
        s11 = peg$parseStatement();
        while (s11 !== peg$FAILED) {
          s10.push(s11);
          s11 = peg$parseStatement();
        }
        s11 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 125) {
          s12 = peg$c2;
          peg$currPos++;
        } else {
          s12 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s12 !== peg$FAILED) {
          s13 = peg$parse_();
          peg$savedPos = s0;
          s0 = peg$f0(s4, s6, s10);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGraphType() {
    let s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseStatement() {
    let s0;

    s0 = peg$parseGraphAttrStmt();
    if (s0 === peg$FAILED) {
      s0 = peg$parseNodeDefaults();
      if (s0 === peg$FAILED) {
        s0 = peg$parseEdgeDefaults();
        if (s0 === peg$FAILED) {
          s0 = peg$parseSubgraphStmt();
          if (s0 === peg$FAILED) {
            s0 = peg$parseEdgeStmt();
            if (s0 === peg$FAILED) {
              s0 = peg$parseGraphAttrDecl();
              if (s0 === peg$FAILED) {
                s0 = peg$parseNodeStmt();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseGraphAttrStmt() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 5) === peg$c4) {
      s2 = peg$c4;
      peg$currPos += 5;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseAttrBlock();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 59) {
          s6 = peg$c5;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f2(s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNodeDefaults() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 4) === peg$c6) {
      s2 = peg$c6;
      peg$currPos += 4;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseAttrBlock();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 59) {
          s6 = peg$c5;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f3(s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEdgeDefaults() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 4) === peg$c7) {
      s2 = peg$c7;
      peg$currPos += 4;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseAttrBlock();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 59) {
          s6 = peg$c5;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f4(s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGraphAttrDecl() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseIdentifier();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 61) {
        s4 = peg$c8;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e8); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseValue();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 59) {
            s8 = peg$c5;
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e5); }
          }
          if (s8 === peg$FAILED) {
            s8 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f5(s2, s6);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSubgraphStmt() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 8) === peg$c9) {
      s2 = peg$c9;
      peg$currPos += 8;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseIdentifier();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      s5 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 123) {
        s6 = peg$c1;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s6 !== peg$FAILED) {
        s7 = peg$parse_();
        s8 = [];
        s9 = peg$parseStatement();
        while (s9 !== peg$FAILED) {
          s8.push(s9);
          s9 = peg$parseStatement();
        }
        s9 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 125) {
          s10 = peg$c2;
          peg$currPos++;
        } else {
          s10 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s10 !== peg$FAILED) {
          s11 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 59) {
            s12 = peg$c5;
            peg$currPos++;
          } else {
            s12 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e5); }
          }
          if (s12 === peg$FAILED) {
            s12 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f6(s4, s8);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNodeStmt() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseIdentifier();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseAttrBlock();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      s5 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 59) {
        s6 = peg$c5;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s6 === peg$FAILED) {
        s6 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f7(s2, s4);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEdgeStmt() {
    let s0, s1, s2, s3, s4, s5, s6;
